--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 /* top display */
 body {
     background-color: #f1f3f4;
@@ -13,10 +11,10 @@ header {
 }
 
 h1 {
-    
     font-size: 50px;
     margin-top: 0;
 }
+
 
 /* now playing */
 #playingDropdown, #queueDropdown {
@@ -25,7 +23,8 @@ h1 {
 
 #nowPlaying, #queuedList {
     /* display: none; */
-    margin: 20px 0;
+    margin-bottom: 20px;
+    border: 1px solid black;
 }
 
 #albumPic {
@@ -38,6 +37,22 @@ h1 {
     margin: 0px;
 }
 
+
+/* queueList */
+#queueList {
+    flex-direction: column;
+}
+
+#queueList > button {
+    background-color: white;
+    border: none;
+}
+
+#queueList > button:hover {
+    border-bottom: 1px solid black;
+}
+
+/* toggle */
 .menu-flex {
     display: flex;
 }
@@ -45,6 +60,8 @@ h1 {
 .menu-hide {
     display: none;
 }
+
+
 
 /* albums */
 #disco {
