--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -107,7 +107,7 @@ h1 {
 .info-container {
     display: grid;
     margin: 10px 0 0 50px;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 3fr;
 }
 
 .info-container > img {
@@ -129,7 +129,7 @@ h1 {
 
 .t-row {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     margin-bottom: 10px;
     border: none;
     background-color: inherit;
@@ -164,7 +164,7 @@ h1 {
 
 
 /* player */
-.player {
+#player {
     width: 100%;
     background-color: white;
     border-radius: 2px;
@@ -194,4 +194,30 @@ audio::-webkit-media-controls-panel, video::-webkit-media-controls-panel {
     display:none;
 }
 
-/* media @ 1000px */
+@media screen and (max-width: 1300px) {
+    .info-container > img {
+        height: 200px;
+        width: 200px;
+    }
+    #albumPic {
+        height: 70px;
+        width: 70px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .info-container > img {
+        height: 150px;
+        width: 150px;
+    }
+    #albumPic {
+        height: 55px;
+        width: 55px;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .info-container > h3 {
+        margin-right: 25px;
+    }
+}
