--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -181,7 +181,7 @@ h1 {
 
 .song-list-row > span {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     padding: 2px 3px 0 0;
 }
 
