--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,6 +1,7 @@
 /* top display */
 body {
     background-color: #f1f3f4;
+    margin: 0px;
 }
 
 header {
@@ -15,16 +16,28 @@ h1 {
     margin-top: 0;
 }
 
-
-/* now playing */
-#playingDropdown, #queueDropdown {
-    margin-left: 20px
+/* user conrol bar */
+#trackQueue {
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    min-height: 35px;
 }
 
-#nowPlaying, #queuedList {
+
+/* now playing */
+#nowPlaying, #queue {
+    border: 1px solid yellowgreen;
     background-color: white;
-    margin-bottom: 20px;
-    border: 1px solid black;
+}
+
+#playingInfo, #queueList {
+    background-color: white;
+    margin-top: 40px;
+    /* border: 1px solid black; */
 }
 
 #albumPic {
@@ -60,16 +73,18 @@ h1 {
 }
 
 /* buttons */
-#playingDropdownButton, #toggleShowQueue {
-    font-size: 30px;
+.toggleButton {
+    font-size: 15px;
     font-family: serif;
-    border: none;
+    /* border: none; */
     padding: 5px;
-    background-color: #f1f3f4;
+    background-color: greenyellow;
     cursor: pointer;
+    position:absolute;
+    top: 0;
 }
 
-#playingDropdownButton:hover, #toggleShowQueue:hover {
+.toggleButton:hover {
     background-color: white;
     color: rgb(0, 217, 255);
     
