--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,4 @@
-/* top display */
+/* Header and Body */
 body {
     background-color: #f1f3f4;
     margin: 0px;
@@ -16,19 +16,17 @@ h1 {
     margin-top: 0;
 }
 
+/*  */
 /* user conrol bar */
-#trackQueue {
-    
+#playerInfo {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     position: fixed;
     bottom: 0;
     min-height: 35px;
 }
 
-
-/* now playing */
 #nowPlaying, #queue {
     border: 1px solid yellowgreen;
     background-color: white;
@@ -43,15 +41,16 @@ h1 {
 #albumPic {
     height: 100px;
     width: 100px;
-    margin: 5px 15px;
+    margin: 5px;
 }
 
 #artistName, #trackName, #albumName {
     margin: 0px;
+    border-bottom: 1px solid #9ebb00;
 }
 
 #albumName {
-    margin-top: 10px;
+    color:rgb(78, 78, 78);
 }
 
 
@@ -74,10 +73,10 @@ h1 {
 
 /* buttons */
 .toggleButton {
-    font-size: 15px;
-    font-family: serif;
-    /* border: none; */
-    padding: 5px;
+    font-size: 1vmax;
+    font-family: sans-serif;
+    border: none;
+    padding: 10px;
     background-color: greenyellow;
     cursor: pointer;
     position:absolute;
@@ -85,7 +84,8 @@ h1 {
 }
 
 .toggleButton:hover {
-    background-color: white;
+    background-color: rgb(214, 245, 167);
+    cursor: pointer;
     color: rgb(0, 217, 255);
     
 }
@@ -223,24 +223,21 @@ h1 {
 
 
 
-
-
-
-
-
 /* player */
 #player {
     width: 100%;
     background-color: white;
     border-radius: 2px;
-    
+    /* margin-top: 35px; */
+    position: absolute;
+    bottom: 0;
 }
 
 audio::-webkit-media-controls-panel, video::-webkit-media-controls-panel {
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     align-items: left;
-    justify-content: flex-start;
+    justify-content: flex-start; */
     -webkit-user-select: none;
     position: relative;
     width: 100%;
@@ -252,7 +249,7 @@ audio::-webkit-media-controls-panel, video::-webkit-media-controls-panel {
     background-color: white;
     border-radius: 5px;
     /* The duration is also specified in MediaControlElements.cpp and LayoutTests/media/media-controls.js */
-    transition: opacity 0.3s;
+    transition: opacity 0.3s; 
 }
 
 .hide {
