--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -45,21 +45,47 @@ audio::-webkit-media-controls-timeline {
 /*  */
 #trackController {
     display: flex;
+    height:200px;
+    background-color:rgb(203 249 236);
+    overflow: hidden;
 }
-#trackController > article {
+/* #trackController > article {
     display: flex;
+    flex-direction: row;
     width: 50%;
     padding-left: 5px;
-    align-items: center;
-    background-color:rgb(203 249 236);
+    
+    
+} */
+
+#anotherPlayer {
+    display: grid;
+    grid-template-columns: 1fr 2fr 3fr;
+    padding-left: 5px;
+}
+
+#qTools {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding-left: 5px;
+    overflow-y: scroll;
+}
+
+
+.option-buttons {
+    width: 100%;
 }
 
 /* Now playing */
 #nowPlayingInfo {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    /* margin: 0 auto; */
+    padding: 5px 20px;
 }
+
+
 
 #artistName, #trackName, #albumName {
     margin: 5px;
@@ -97,8 +123,8 @@ audio::-webkit-media-controls-timeline {
     border-left: 15px dotted #000000;
     cursor: pointer;
 }
-#queueList > button:first-child::after {
-    content: " ~ up next!";
+#queueList > button:first-child::before {
+    content: " up next! ~~ ";
     font-weight: bold;
 }
 
@@ -110,17 +136,18 @@ audio::-webkit-media-controls-timeline {
 
 /* Play Pause Next Queue Buttons */
 .controlBtns {
-    display:flex;
-    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .controlBtns > button {
     padding: 10px;
+    height: 80px;
+    width: 80px;
+    margin: auto;
 }
 
 #nextTrack {
-    margin: 0 5px;
-    vertical-align: super;
     background-color: darkorange;
 }
 
@@ -137,6 +164,21 @@ audio::-webkit-media-controls-timeline {
     display: none;
 }
 
+/* Options */
+.opt-default {
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    border: 1px solid black;
+    cursor: alias;
+    font-family: sans-serif;
+    background-color: red;
+    width: 100%;
+}
+
+.opt-on {
+    background-color: green;
+}
 
 /*  */
 /* Album View */
@@ -220,7 +262,7 @@ audio::-webkit-media-controls-timeline {
 /*  */
 .song-list-row {
     display: grid;
-    grid-template-columns: 1fr 2fr 2fr 1fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr 2fr 1fr;
     width: 100%;
 }
 
