--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -60,6 +60,7 @@ audio::-webkit-media-controls-timeline {
 
 #anotherPlayer {
     display: grid;
+    width: 50%;
     grid-template-columns: 1fr 2fr 3fr;
     padding-left: 5px;
 }
@@ -142,8 +143,8 @@ audio::-webkit-media-controls-timeline {
 
 .controlBtns > button {
     padding: 10px;
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    width: 50px;
     margin: auto;
 }
 
@@ -152,7 +153,7 @@ audio::-webkit-media-controls-timeline {
 }
 
 .glyphicon {
-    font-size: 30px;
+    font-size: 25px;
 }
 
 /* toggle queue */
