--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -263,8 +263,9 @@ audio::-webkit-media-controls-timeline {
 /*  */
 .song-list-row {
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr 2fr 1fr;
     width: 100%;
+    /* trkNum, trkName, trkLength, epName, artist, trackurl, ogfilename, date, time */
+    grid-template-columns: .5fr 3fr .7fr 1fr 2fr 2fr 2fr 1fr 1fr;
 }
 
 .song-list-row > span {
